# cq4oe-benchmark

./: CITATION.cff  README.md  pyproject.toml  usage_instructions.md
.github/challenge/: SETUP.md  collect_into_submission.py  make_result_data.py  stage_submission.py  validate_submission.py
.github/workflows/: evaluate-submission.yml  post-results.yml  record-on-merge.yml
CQ2Onto/competency_question/: awo_cq2onto_cqs.json
CQ2Onto/scripts/: run_all_evaluation_agent_datasets.py  run_all_evaluation_agent_datsets.py
CQ2Onto/scripts/axioms/: eval_axioms.py
CQ2Onto/scripts/concept/: eval_concept.py
CQ2Onto/scripts/property/: eval_property.py
CQ2Onto/scripts/triple/: eval_triple.py
CQ2Term/competency_question/: wine_cq2term_cqs.json
CQ2Term/scripts/: concept_label_matching.py  eval_cq_terms.py  run_all_cq2term.py
OntoCatalogue/html/: catalog.html
core_term_diagram/odrl/: odrl.md  sub_odrl.md
core_term_diagram/wine/: cq_aligned_wine.md  original_gold_wine.md
leaderboard/: backfill_legacy_cli_args.py  build_leaderboard.py  cqs.html  cqs_data.js  index.html  leaderboard.html  leaderboard.md  leaderboard_data.js  provenance.yaml
submission/: submission_guideline.md
submission/example-submission/: metadata.yml
submissions/example-submission/: metadata.yml
submissions/example-submission/code/: requirements.txt
submissions/pseudo_submission/: metadata.yml
submissions/pseudo_submission/code/: run.py
submissions/pseudo_submission/report/: SUMMARY.md  leaderboard.md
submissions/pseudo_submission/result/: leaderboard.md  result_data.js  summary.md
(+247 files in other folders)
